test/negative/704_tag_on_nonvariant.err
704_tag_on_nonvariant.fx:3:9: error: attempt to treat non-record and non-variant as a record

1 errors occured during type checking.
